6.4K8s_openshift_migration/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
