6.4K8s_openshift_migration/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
     - port: 8080
       targetPort: 8080
       name: http
