6.4K8s_openshift_migration/wordpress-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wordpress
  labels:
    app: wordpress
    app.kubernetes.io/part-of: wordpress
spec:
  to:
    kind: Service
    name: wordpress-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
